# telco_churn_azure_ml

./: README.md  activating the virtual environment.txt  main.py  model.pkl  pyproject.toml  requirement.txt  telco_churn_model.pkl
notebooks/: Exploratory Data Analysis on the Data.ipynb
src/: train.py  train_1.py
